# BlueWren

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  security.yml
docs/ADR/: 0001-project-scope-and-non-goals.md  0002-ephemeral-identity-per-process.md  0003-fixed-length-frame-padding.md  0004-ticket-handling-and-sas.md  0005-relay-and-metadata-boundary.md  0006-terminal-sanitization.md  0007-logging-and-metadata-boundary.md  0008-supply-chain-hygiene.md  0009-timeouts-and-stream-limits.md
docs/principles/: BlueWren_v0_2_design_guidelines.md  SAFE_USAGE.md  THREAT_MODEL.md
src/: cli.rs  frame.rs  main.rs  pairing.rs  sanitize.rs  session.rs
